force-app/main/default/objects/Project_Margins__c/Project_Margins__c.object-meta.xml
<CustomObject>
    <label>Project Margins</label>
    <nameField>
        <label>Project Margins Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Margins</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>