force-app/main/default/objects/Project_Margins__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Project__r.pse__Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>