force-app/main/default/objects/Project_Margins__c/fields/Billable_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Billable_Labor_Cost__c</fullName>
    <label>Billable Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>