force-app/main/default/objects/Project_Margins__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <label>Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>