force-app/main/default/objects/Project_Margins__c/fields/Current_YTD_Thru__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Thru__c</fullName>
    <formula>$Setup.projectMarginSettings__c.Last_Snapshot_Month__c -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current YTD Thru</label>
    <type>DateTime</type>
</CustomField>