force-app/main/default/objects/Project_Margins__c/fields/Expense_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Expense_Recovery__c</fullName>
    <label>Expense Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>