force-app/main/default/objects/Project_Margins__c/fields/Hazard_Pay__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Pay__c</fullName>
    <label>Hazard Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>