force-app/main/default/objects/Project_Margins__c/fields/I_C_Costs__c.field-meta.xml
<CustomField>
    <fullName>I_C_Costs__c</fullName>
    <label>I/C Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>