force-app/main/default/objects/Project_Margins__c/fields/Include_in_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Reporting__c</fullName>
    <formula>IF(YEAR(Month__c) &lt; YEAR(DATEVALUE(CreatedDate)), TRUE,
IF(AND(YEAR(Month__c) = YEAR(DATEVALUE(CreatedDate)), MONTH(Month__c) &lt; MONTH(DATEVALUE(CreatedDate))),TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in Reporting</label>
    <type>Checkbox</type>
</CustomField>