force-app/main/default/objects/Project_Margins__c/fields/Indirect_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Expenses__c</fullName>
    <label>Indirect Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>