force-app/main/default/objects/Project_Margins__c/fields/Last_Snapshot_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Snapshot_Month__c</fullName>
    <formula>AND(CreatedDate &gt; $Setup.projectMarginSettings__c.Last_Snapshot_Month__c,
NOT(CreatedDate &gt; $Setup.projectMarginSettings__c.Last_Snapshot_Month__c + 28), 
Month__c &lt; DATEVALUE($Setup.projectMarginSettings__c.Last_Snapshot_Month__c),
YEAR(DATEVALUE($Setup.projectMarginSettings__c.Last_Snapshot_Month__c-1))= YEAR(Month__c),
MONTH(DATEVALUE($Setup.projectMarginSettings__c.Last_Snapshot_Month__c-1)) = MONTH(Month__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Snapshot Month</label>
    <type>Checkbox</type>
</CustomField>