force-app/main/default/objects/Project_Margins__c/fields/Non_Billable_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Expenses__c</fullName>
    <label>Non-Billable Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>