force-app/main/default/objects/Project_Margins__c/fields/Non_Billable_Labor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Labor_Cost__c</fullName>
    <label>Non-Billable Labor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>