force-app/main/default/objects/Project_Margins__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <formula>BLANKVALUE(Project__r.pse__Account__r.Parent.Name, Project__r.pse__Account__r.Name)</formula>
    <label>Parent Account</label>
    <type>Text</type>
</CustomField>