force-app/main/default/objects/Project_Margins__c/fields/Professional_Service_Fees__c.field-meta.xml
<CustomField>
    <fullName>Professional_Service_Fees__c</fullName>
    <label>Professional Service Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>